--- a/application/package.json
+++ b/application/package.json
@@ -14,10 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
@@ -26,6 +27,8 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "style-loader": "^3.2.1",
     "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2"
   }
